# my_uv_project

./: pyproject.toml
.github/: ci.yml
src/my_uv_project/: __init__.py  core.py
tests/: test_core.py
