[project]
name = "my-uv-project"
version = "0.1.0"
description = "Example uv-based Python project"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Jim Lee" }
]

dependencies = []

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "mypy"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_uv_project"]

# ------------------------
# Ruff (lint + format)
# ------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"

# ------------------------
# Mypy (type checking)
# ------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

# ------------------------
# Pytest
# ------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
